# stratonotes

./: .editorconfig  .prettierrc  README.md  index.html  package-lock.json  package.json
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: explorer.rs  lib.rs  main.rs
src-tauri/src/settings/: mod.rs
src/components/: AIPrompt.tsx  Editor.tsx  FileList.tsx  Footer.tsx  Graphviewer.tsx  Header.tsx  NoteToolbar.tsx  PopUpWindow.tsx  Ribbons.tsx  Searchbar.tsx  Sidebar.tsx  Summarizer.tsx  Window.tsx
src/contexts/: EditorContext.tsx  EditorModeContext.tsx  ExplorerContext.tsx  SidebarContext.tsx  WindowsContext.tsx
